App and refactoring